--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=fe96f037c9155276f3e4b6533640e50f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/apdrivedb?serverVersion=8.0.32&charset=utf8mb4"
+ DATABASE_URL="mysql://root:root@127.0.0.1:8889/apdrivedb?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql:root:@127.0.0.1:5432/apdrivedb?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
